2004-08-17  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char): Fix for the case CODE is a cons
	of integers.

2004-08-03  Steven Tamm  <steventamm@mac.com>

	* term/mac-win.el: Use mac-standard-fontset-spec to create
	fontset-mac
	(mac-standard-fontset-spec): Created 

2004-04-27  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (unicode-data): Call
	find-file-noselect with NOWARN t.

2004-04-21  Kenichi Handa  <handa@m17n.org>

	* international/mule-conf.el (cp932-2-byte): Fix :code-space.

2004-04-20  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Give more CJK characters the
	category `|'.

	* descr-text.el (describe-char): Make it work on *Help* buffer.
	Suppress auto-compostion on a region describing about composition.

	* language/european.el (diacritic-compose-region): Compose
	diacritical marks only with a character whose syntax is word
	constituent.
	(diacritic-compose-string): Likewise.
	(diacritic-composition-function): Likewise.
	(diacritic-post-read-conversion): Delete it.

2004-04-19  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix invalid encoding caused by the
	previous sync.

2004-04-16  Kenichi Handa  <handa@m17n.org>

	Sync all files to HEAD.

2004-04-15  Kenichi Handa  <handa@m17n.org>

	* composite.el (auto-compose-chars): Execute the main code in
	condition-case.

2004-04-14  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-property-list): Sync to HEAD.

	* international/mule-diag.el: Sync to HEAD.

	* international/fontset.el (x-complement-fontset-spec): Don't
	change CHARSET_REGISTRY and CHARSET_ENCODING fields.

2004-04-13  Kenichi Handa  <handa@m17n.org>

	* international/characters.el (next-word-boundary-kana): Handle
	half-width kana.

2004-04-12  Kenichi Handa  <handa@m17n.org>

	* international/mule-conf.el (indian-1-column): Fix :emacs-mule-id.

2004-04-09  Kenichi Handa  <handa@m17n.org>

	* language/japanese.el (japanese-iso-8bit): Fix order of